<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00FFFFFF"
    tools:context=".admin.AdminActivity">


    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagemain" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/language_btn"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/languages" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/lumina_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="305dp"
        android:weightSum="4"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackgroundImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_notification"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/notification_image"
                android:scaleX="@dimen/IconScales"
                android:scaleY="@dimen/IconScales"
                app:srcCompat="@drawable/notificationbell" />

            <ImageView
                android:id="@+id/icon_exams"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/exam_image"
                android:paddingLeft="20dp"
                app:srcCompat="@drawable/exam" />

            <ImageView
                android:id="@+id/icon_allotments"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/allotment_image"
                android:scaleX="0.80"
                android:scaleY="0.80"
                app:srcCompat="@drawable/delegate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="150"
            android:orientation="horizontal"
            android:paddingTop="22dp">

            <Button
                android:id="@+id/btn_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="53"
                android:autoSizeTextType="uniform"
                android:contentDescription="@string/notification_btn"
                android:text="@string/notification"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btn_exams"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="45"
                android:contentDescription="@string/exam_btn"
                android:text="@string/exam"
                android:autoSizeTextType="uniform"
                tools:targetApi="o"/>

            <Button
                android:id="@+id/btn_allotments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="52"
                android:contentDescription="@string/allotment_btn"
                android:text="@string/allotment_schedule"
                android:autoSizeTextType="uniform"
                tools:targetApi="o"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_queries"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/queries_image"
                android:scaleX="@dimen/IconScales"
                android:scaleY="@dimen/IconScales"
                app:srcCompat="@drawable/query" />

            <ImageView
                android:id="@+id/icon_mwriters"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mwriters_image"
                android:scaleX="@dimen/IconScales"
                android:scaleY="@dimen/IconScales"
                app:srcCompat="@drawable/mwriter" />

            <ImageView
                android:id="@+id/icon_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/help_image"
                android:scaleX="@dimen/IconScales"
                android:scaleY="@dimen/IconScales"
                app:srcCompat="@drawable/help" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="22dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_queries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/queries_btn"
                android:text="@string/queries" />

            <Button
                android:id="@+id/btn_mwriters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/mwriters_btn"
                android:text="@string/manage_writers" />

            <Button
                android:id="@+id/btn_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/help_btn"
                android:text="@string/help" />
        </LinearLayout>

        <include layout="@layout/layout_bottom_bar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>