<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddExam">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        tools:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/lumina_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/enter_exam_details"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/exam_subject"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enter_exam_subject"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@android:color/primary_text_light" />

        <!-- Exam Date EditText -->
        <EditText
            android:id="@+id/exam_date"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enter_exam_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColorHint="@android:color/primary_text_light" />

        <!-- Exam Time EditText -->
        <EditText
            android:id="@+id/exam_time"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/enter_exam_time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textColorHint="@android:color/primary_text_light" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
