<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/query_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.QueriesAdmin">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        tools:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/lumina_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <include
        layout="@layout/layout_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/query_text"
        android:layout_width="365dp"
        android:layout_height="163dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/please_type_your_query"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <Button
        android:id="@+id/button2"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginTop="118dp"
        android:contentDescription="@string/submit"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_text" />

    <include
        layout="@layout/layout_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>