<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vi.VIActivity">

    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagemain" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/language_btn"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/languages" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/lumina_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="410dp"
        android:layout_height="157dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/BackgroundImage">

        <ImageView
            android:id="@+id/icon_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/notification_image"
            android:scaleX="@dimen/IconScales"
            android:scaleY="@dimen/IconScales"
            app:srcCompat="@drawable/notificationbell" />

        <ImageView
            android:id="@+id/icon_exams"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/queries_image"
            android:paddingLeft="20dp"
            app:srcCompat="@drawable/query" />

        <ImageView
            android:id="@+id/icon_allotments"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/help_image"
            android:scaleX="0.80"
            android:scaleY="0.80"
            app:srcCompat="@drawable/help" />

    </LinearLayout>


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Querries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:layout_marginTop="676dp"
        app:layout_constraintEnd_toStartOf="@id/ivHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="43dp"
        android:layout_height="33dp"
        android:layout_marginTop="680dp"
        app:layout_constraintEnd_toStartOf="@id/ivSetting"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homebutton" />

    <ImageView
        android:id="@+id/ivSetting"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivHome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />
</androidx.constraintlayout.widget.ConstraintLayout>
